# OpenCV_APP

./: .gitignore  BA_3D.pickle  BA_RT.pickle  BLENDER.pickle  BLOB_INFO.pickle  CAMERA_INFO.pickle  CAMERA_INFO_BACKUP.pickle  CAMERA_INFO_PLANE.pickle  FAIL_REASON.pickle  FAIL_REASON_points3D_IQR.pickle  FAIL_REASON_points3D_legacy.pickle  FAIL_REASON_points3D_origin.pickle  FINAL_BA_RT.pickle  FINAL_BLOB_INFO.pickle  FINAL_CAMERA_INFO.pickle  FITTING_CIRCLE.pickle  NEW_CAMERA_INFO_-1.pickle  NEW_CAMERA_INFO_1.pickle  README.md  REMADE_3D_INFO.pickle  RIGID_3D_TRANSFORM.pickle  basic_test.pickle  camera_log_final.txt  camera_log_final_ARCTURAS.txt  camera_log_final_RIFTS.txt  camera_log_final_SEMI_SLAM_CURVE.txt  combined_summary.csv  output_backup.mkv  output_rifts_right_9.mkv  result.pickle  result_new_object.pickle  summary_points3D_IQR.csv  summary_points3D_legacy.csv  summary_points3D_origin.csv
API_TEST/: camera_setting_phone.ipynb  definition.py  phone_camera.py  phone_led_tracking.ipynb  phone_main.py  uvc_stereo.ipynb
Calibration/: Python_sample.egg  README.md
Essential/: cal_def.py  definition.py  essential_2nd.py  essential_api_test.py  essential_main.py  essential_test.py  ransac_test.py  rift_6.txt  solvePnP_triangulate.py
Machine_learning/: data_file  vectors_data.py
Pyramid_Algorithm/: pyramid.py
connection/: bluetooth.py  usb.py
fastcv_app/: settings.gradle
fastcv_app/app/src/main/cpp/: CMakeLists.txt  FastCVSample.cpp  FastCVSample.h  FastCVSampleRenderer.cpp  FastCVSampleRenderer.h  native-lib.cpp
lambdatwist/: lambdatwist_p3p.c
(+499 files in other folders)
